<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">
    <TableRow>

        <TextView
            android:id="@+id/location_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/location_caption" />

        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="3dip"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/default_na_text" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/manufacturer_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/manufacturer_caption" />

        <TextView
            android:id="@+id/manufacturer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="3dip"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/default_na_text" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/model_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/model_caption" />

        <TextView
            android:id="@+id/model_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:padding="3dip"
            android:text="@string/default_na_text" />
    </TableRow>
</TableLayout>